--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ prefecture. In addition, the data breaks out occupations by whether the responde
 businesses, and employed by others. This may be useful in looking a occupations in which free-lancing and other forms 
 of self-employment are of interest.</p>-->
 <ol>
-  <li><h4><a href="basic/GettingTheData.html">Getting the data for harmonizing 1985-2005 occupation classifications</a></h4>
+  <li><h4><a href="basic/GettingTheData.html">Getting the data for creating occupational crosswalk</a></h4>
   <p>A step by step guide to downloading occupation and gender data from Japanese population censuses.</p></li>
   <li><h4><a href="basic/PreprocessingTheData.html">Preprocessing the data</a></h4>
   <p>Data downloaded from e-Stat usually must be processed before it can be incorporated into statistics 
