--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ of self-employment are of interest.</p>-->
   </p></li>
 <li>
 <h4><a href="basic/OccupationalCrosswalk.html">
-Harmonizing 1985-2005 occupation classifications</a></h4>
+Occupational crosswalk</a></h4>
 <p>The objective is to create occupational crosswalk covering population censuses between 1985 and 2005. I omit 
   the 1980 census because it is available only in PDF image format.</p>
 </li>
