--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <!--<meta name="google-site-verification" content="Z7SEnQaO9LAITbhuwGaI3rFtnpMRKeV9BbaW3LyvP2g" />-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="revised" content="15 November 2021" />
+      <meta name="revised" content="13 December 2021" />
         <title>Gender Gap Japan</title>
 
         <link rel="stylesheet" href="https://latex.now.sh/style.css"> 
@@ -12,7 +12,7 @@
 <body>
 <h1>Gender Gap Japan</h1>
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
-16 November 2021</p>
+13 December 2021</p>
 <div class="abstract"><p>Objective: Apply segregation statistics to government data around and about Tsukuba.
 </p>
   <p class="abstract">A recently published decomposition method (Elbers, 2021) enables 
@@ -64,13 +64,13 @@ of self-employment are of interest.</p>-->
 <li>
 <h4><a href="basic/OccupationalCrosswalk.html">
 Occupational crosswalk</a></h4>
-<p>The objective is to create occupational crosswalk covering population censuses between 1985 and 2005. I omit 
+<p>The objective is to create an occupational crosswalk covering population censuses between 1985 and 2005. I omit 
   the 1980 census because it is available only in PDF image format.</p>
 </li>
 <li>
 <h4><a href="basic/BuildMasterDataset.html">
   Build master dataset</a></h4>
-  <p>The occupational crosswalk used to build a master dataset from the preprocessed occupation-gender 
+  <p>The occupational crosswalk is used to build a master dataset from the preprocessed occupation-gender 
     data.</p>
   </li>
   <li>
