harmonize -> crosswalk language

--- a/basic/OccupationalCrosswalk.html
+++ b/basic/OccupationalCrosswalk.html
@@ -25,6 +25,7 @@ period. Uchikoshi and Mugiyama (2020) created such a crosswalk to cover censuses
 1980 and 2005. This task creates a similar crosswalk covering censuses carried out between 1985 and 2005. 
 Census information for 1980 is available only in PDF scanned image format and would need to be manually 
 keyed in, so it is omitted from this task. </p>
+<p>The crosswalk created here was created independently of Uchikoshi and Mugiyama (2020) and may differ.</p>
 <ul>
 <p>Coding for the crosswalk has the following features:</p>
 <li>No leading zeros so that sorting as numbers and sorting as text produce the same results</li>
@@ -126,7 +127,7 @@ in the 2005 census. </p>
 <blockquote>
   <ol>
     <h4>Datasets:</h4>
-    <li><a href="https://alanintsukuba.github.io/gender.gap.japan/inst/extdata/OccupationalCrosswalk1985-2005.csv">Harmonized occupational classes in CSV format</a></li>
+    <li><a href="https://alanintsukuba.github.io/gender.gap.japan/inst/extdata/OccupationalCrosswalk1985-2005.csv">Occupational crosswalk in CSV format</a></li>
     <li>For public critique, the <a href="https://alanintsukuba.github.io/gender.gap.japan/basic/data/OccupationalCrosswalk1985-2005.xlsx">XSLX spreadsheet</a> used 
       for this task. (This spreadsheet also contains data for 2010 and 2015, but these are not used in the crosswalk.</li>
   </ol>
