--- a/basic/OccupationalCrosswalk.html
+++ b/basic/OccupationalCrosswalk.html
@@ -129,7 +129,7 @@ in the 2005 census. </p>
     <h4>Datasets:</h4>
     <li><a href="https://alanintsukuba.github.io/gender.gap.japan/inst/extdata/OccupationalCrosswalk1985-2005.csv">Occupational crosswalk in CSV format</a></li>
     <li>For public critique, the <a href="https://alanintsukuba.github.io/gender.gap.japan/basic/data/OccupationalCrosswalk1985-2005.xlsx">XSLX spreadsheet</a> used 
-      for this task. (This spreadsheet also contains data for 2010 and 2015, but these are not used in the crosswalk.</li>
+      for this task. (This spreadsheet also contains data for 2010 and 2015, but these are not used in the crosswalk.)</li>
   </ol>
 </blockquote>
 </main>
