--- a/basic/ReproduceUMResults.html
+++ b/basic/ReproduceUMResults.html
@@ -2,7 +2,7 @@
     <head>
       <!--<meta name="google-site-verification" content="Z7SEnQaO9LAITbhuwGaI3rFtnpMRKeV9BbaW3LyvP2g" />-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <meta name="revised" content="11 December 2021" />
+      <meta name="revised" content="13 December 2021" />
         <title>Reproduce results from Uchikoshi and Mugiyama (2020)</title>
 
         <link rel="stylesheet" href="https://latex.now.sh/style.css"> 
@@ -16,8 +16,19 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <body>
 <h1>Reproduce results from Uchikoshi and Mugiyama (2020)</h1>
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
-11 December 2021</p>
+13 December 2021</p>
 <main>
+  <p>The task reproduces the main results of Uchikoshi and Mugiyama (2020) [UM2020] using the occupational crosswalk 
+    developed above. The left panel of Figure 1 of UM2020 shows the dissimilarity index produced by their crosswalk for census years 1980 
+    through 2005. The right panel shows the relative change with 1980 as the reference. The figure below shows the 
+    corresponding graphs from this project's crosswalk covering 1985 to 2005. While the numberical output varies slightly, 
+    probably due to small differences in crosswalks, the trends are close to identical.
+  </p>
+  <figure>
+    <img src="images/UMDissimilarity01.png"
+          loading="lazy" alt="Dissimilarity Index 1985-2005" width="600" height="500" />
+        <figcaption>Dissimilarity Index 1985-2005</figcaption>
+</figure>
 </main>
 <div id="references" class="section level2">
     <h2 class="hasAnchor">
