add note re scales

--- a/basic/ReproduceUMResults.html
+++ b/basic/ReproduceUMResults.html
@@ -21,7 +21,8 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
   <p>The task reproduces the main results of Uchikoshi and Mugiyama (2020) [UM2020] using the occupational crosswalk 
     developed above. The left panel of Figure 1 of UM2020 shows the dissimilarity index produced by their crosswalk for census years 1980 
     through 2005. The right panel shows the relative change with 1980 as the reference. The figure below shows the 
-    corresponding graphs from this project's crosswalk covering 1985 to 2005. While the numberical output varies slightly, 
+    corresponding graphs from this project's crosswalk covering 1985 to 2005. UM2020 uses a 0-100 dissimilarity scale; 
+    in this task, I use a 0-1 scale. While the numberical output varies slightly, 
     probably due to small differences in crosswalks, the trends are close to identical.
   </p>
   <figure>
