add descriptive text

--- a/basic/ReproduceUMResults.html
+++ b/basic/ReproduceUMResults.html
@@ -30,6 +30,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
           loading="lazy" alt="Dissimilarity Index 1985-2005" width="600" height="500" />
         <figcaption>Dissimilarity Index 1985-2005</figcaption>
 </figure>
+<p>The R code for the above figure is below.</p>
 <pre><code class="language-html">#' ReproduceUMResults.R
   #' Use data from UchikoshiMugiyamaRepro01.R in decomposition
   #' following script in UMDissimilarity.R and functions in 
