crosswalk and decomposition

--- a/basic/OccupationalCrosswalk.html
+++ b/basic/OccupationalCrosswalk.html
@@ -21,7 +21,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <main>
 <p>The occupational classifications used in the population censuses carried out between 1985 and 2005
 slightly differ. Crosswalks must be developed if we want to follow overall trends during this 
-period. Uchikoshi and Mugiyama (2020) created such a crosswalk to cover censuses carried out between 
+period. Uchikoshi and Mugiyama (2020) [UM2020] created such a crosswalk to cover censuses carried out between 
 1980 and 2005. This task creates a similar crosswalk covering censuses carried out between 1985 and 2005. 
 Census information for 1980 is available only in PDF scanned image format and would need to be manually 
 keyed in, so it is omitted from this task. </p>
@@ -116,6 +116,11 @@ in the 2005 census. </p>
   the occupation levels used for the Population Census of Japan. The added OccSub level reflects the fact 
   that the population census classifications actually have 4 levels. 
 </p>
+<p>This crosswalk has 261 to 264 occupations (see <a href="DescriptiveStatistics.html">descriptive statistics</a>) in 
+  contrast to the 245 of UM2020's crosswalk. One reason for this may be differing starting points for creating the 
+crossworks. The crosswalk in this task prioritizes the <a href="https://www.stat.go.jp/english/data/kokusei/2005/syokugyo.html">
+  2005 occupational classification</a> while UM2020 appears to 
+prioritize the 1980 classification. </p>
 <figure>
   <img src="images/OccupationalCrosswalk06.png"
         loading="lazy" alt="Creating hierarchical occupational numbering scheme" width="600" height="500" />
