--- a/basic/GettingTheData.html
+++ b/basic/GettingTheData.html
@@ -4,7 +4,7 @@
       <!--<meta name="google-site-verification" content="Z7SEnQaO9LAITbhuwGaI3rFtnpMRKeV9BbaW3LyvP2g" />-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta name="revised" content="26 November 2021" />
-        <title>Getting the data for harmonizing 1985-2005 occupation classifications</title>
+        <title>Getting the data for creating occupational crosswalk</title>
 
         <link rel="stylesheet" href="https://latex.now.sh/style.css"> 
         <link rel="stylesheet" href="https://alanintsukuba.github.io/ShowReferencesModal.css"> 
@@ -15,7 +15,7 @@ integrity="sha256-nvJJv9wWKEm88qvoQl9ekL2J+k/RWIsaSScxxlsrv8k=" crossorigin="ano
 integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="anonymous"></script><!--[if lt IE 9]-->    
 </head>
 <body>
-<h1>Getting the data for harmonizing 1985-2005 occupation classifications</h1>
+<h1>Getting the data for creating occupational crosswalk</h1>
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
 30 November 2021</p>
 <main>
