--- a/basic/ReproduceUMResults.html
+++ b/basic/ReproduceUMResults.html
@@ -18,6 +18,8 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
 13 December 2021</p>
 <main>
+  <article>
+    <h4>Reproduce dissimilarity computations</h4>
   <p>The task reproduces the main results of Uchikoshi and Mugiyama (2020) [UM2020] using the occupational crosswalk 
     developed above. The left panel of Figure 1 of UM2020 shows the dissimilarity index produced by their crosswalk for census years 1980 
     through 2005. The right panel shows the relative change with 1980 as the reference. The figure below shows the 
@@ -32,62 +34,224 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 </figure>
 <p>The R code for the above figure is below.</p>
 <pre><code class="language-html">#' ReproduceUMResults.R
-  #' Use data from UchikoshiMugiyamaRepro01.R in decomposition
-  #' following script in UMDissimilarity.R and functions in 
-  #' dissimilarity_um.R
-  #' @references
-  #' [UM2020] Uchikoshi, Fumiya, Ryota Mugiyama. (2020) Trends in Occupational Sex Segregation in Japan: 
-  #'         A Decomposition Analysis of Census Data, 1980-2005. 
-  #'       Japanese Journal of Population Studies. 2020. 56. 9-23 
-  #' [Elbers] Benjamin Elbers. 2021. A Method for Studying Differences in
-  #'   Segregation Across Time and Space Sociological Methods & Research.
-  #'   doi: 10.1177/0049124121986204
-  
-  library(segregation)
-  library(data.table)
-  source("Scripts/dissimilarity_um.R")
-  
-  # use 1985 occupation statistics with occupational crosswalk
-  # make data.table copy
-  d85 <- as.data.table(occgenall[occgenall$CensusYear == "1985",c("OccMinor","Gender","value")])
-  head(d85)
-  
-  # start with Elbers dissimilarity function
-  segregation::dissimilarity(d85, "Gender","OccMinor", weight="value")
-  #    stat       est
-  # 1:    D 0.5121397
-  
-  # then with UM2020 dissimilarity
-  ggj.dissimilarity_all(d85, "Gender","OccMinor", weight="value")
-  #    stat       est
-  # 1:    D 0.5121397
-  
-  # do remaining years
-  d90  <- as.data.table(occgenall[occgenall$CensusYear == "1990",c("OccMinor","Gender","value")])
-  d95  <- as.data.table(occgenall[occgenall$CensusYear == "1995",c("OccMinor","Gender","value")])
-  d00  <- as.data.table(occgenall[occgenall$CensusYear == "2000",c("OccMinor","Gender","value")])
-  d05  <- as.data.table(occgenall[occgenall$CensusYear == "2005",c("OccMinor","Gender","value")])
-  
-  # put in data table for plotting as in figure 1 of UM2020
-  di_um <- data.table( CensusYear = c(1985,1990,1995,2000,2005),
-  DI = c(ggj.dissimilarity_all(d85, "Gender","OccMinor", weight="value")[,"est"],
-  ggj.dissimilarity_all(d90, "Gender","OccMinor", weight="value")[,"est"],
-  ggj.dissimilarity_all(d95, "Gender","OccMinor", weight="value")[,"est"],
-  ggj.dissimilarity_all(d00, "Gender","OccMinor", weight="value")[,"est"],
-  ggj.dissimilarity_all(d05, "Gender","OccMinor", weight="value")[,"est"]) )
-  
-  di_um$Change <- as.numeric(di_um$DI ) / as.numeric(di_um[1,2][[1]])
-  
-  windows(11,5)
-  par(mfrow=c(1,2))
-  with(di_um, plot(CensusYear, DI, ylim=c(0,0.60), type="b",
-    main="Dissimilarity Index", ylab=""))
-  with(di_um, text(CensusYear, DI, labels=round(as.numeric(di_um$DI ),4), 
-    pos=3,cex=0.7))
-  with(di_um, plot(CensusYear, Change, ylim=c(0.85,1.15), type="b",
-    main="Change versus 1985", ylab=""))
-  with(di_um, text(CensusYear, Change, labels=round(as.numeric(di_um$Change ),3), 
-    pos=3,cex=0.7))</code></pre>
+#' Use data from UchikoshiMugiyamaRepro01.R in decomposition
+#' following script in UMDissimilarity.R and functions in 
+#' dissimilarity_um.R
+#' @references
+#' [UM2020] Uchikoshi, Fumiya, Ryota Mugiyama. (2020) Trends in Occupational Sex Segregation in Japan: 
+#'         A Decomposition Analysis of Census Data, 1980-2005. 
+#'       Japanese Journal of Population Studies. 2020. 56. 9-23 
+#' [Elbers] Benjamin Elbers. 2021. A Method for Studying Differences in
+#'   Segregation Across Time and Space Sociological Methods & Research.
+#'   doi: 10.1177/0049124121986204
+
+library(segregation)
+library(data.table)
+source("Scripts/dissimilarity_um.R")
+
+# use 1985 occupation statistics with occupational crosswalk
+# make data.table copy
+d85 <- as.data.table(occgenall[occgenall$CensusYear == "1985",c("OccMinor","Gender","value")])
+head(d85)
+
+# start with Elbers dissimilarity function
+segregation::dissimilarity(d85, "Gender","OccMinor", weight="value")
+#    stat       est
+# 1:    D 0.5121397
+
+# then with UM2020 dissimilarity
+ggj.dissimilarity_all(d85, "Gender","OccMinor", weight="value")
+#    stat       est
+# 1:    D 0.5121397
+
+# do remaining years
+d90  <- as.data.table(occgenall[occgenall$CensusYear == "1990",c("OccMinor","Gender","value")])
+d95  <- as.data.table(occgenall[occgenall$CensusYear == "1995",c("OccMinor","Gender","value")])
+d00  <- as.data.table(occgenall[occgenall$CensusYear == "2000",c("OccMinor","Gender","value")])
+d05  <- as.data.table(occgenall[occgenall$CensusYear == "2005",c("OccMinor","Gender","value")])
+
+# put in data table for plotting as in figure 1 of UM2020
+di_um <- data.table( CensusYear = c(1985,1990,1995,2000,2005),
+DI = c(ggj.dissimilarity_all(d85, "Gender","OccMinor", weight="value")[,"est"],
+ggj.dissimilarity_all(d90, "Gender","OccMinor", weight="value")[,"est"],
+ggj.dissimilarity_all(d95, "Gender","OccMinor", weight="value")[,"est"],
+ggj.dissimilarity_all(d00, "Gender","OccMinor", weight="value")[,"est"],
+ggj.dissimilarity_all(d05, "Gender","OccMinor", weight="value")[,"est"]) )
+
+di_um$Change <- as.numeric(di_um$DI ) / as.numeric(di_um[1,2][[1]])
+
+windows(11,5)
+par(mfrow=c(1,2))
+with(di_um, plot(CensusYear, DI, ylim=c(0,0.60), type="b",
+  main="Dissimilarity Index", ylab=""))
+with(di_um, text(CensusYear, DI, labels=round(as.numeric(di_um$DI ),4), 
+  pos=3,cex=0.7))
+with(di_um, plot(CensusYear, Change, ylim=c(0.85,1.15), type="b",
+  main="Change versus 1985", ylab=""))
+with(di_um, text(CensusYear, Change, labels=round(as.numeric(di_um$Change ),3), 
+  pos=3,cex=0.7))</code></pre>
+</article>
+<article>
+  <h4>Decomposition of changes between censuses</h4>
+  <figure>
+    <img src="images/UMDissimilarity02.png"
+          loading="lazy" alt="Decomposition of changes in gender-occupation segregation" width="600" height="500" />
+        <figcaption>Decomposition of changes in gender-occupation segregation</figcaption>
+</figure>
+<p>The R code for the above figure is below.</p>
+<pre><code class="language-html"># decompose census-to-census changes 
+#' dissimilarity indexes for time points
+d85.du <- ggj.dissimilarity_unit(d85,"Gender","OccMinor", weight="value")
+d90.du <- ggj.dissimilarity_unit(d90,"Gender","OccMinor", weight="value")
+d95.du <- ggj.dissimilarity_unit(d95,"Gender","OccMinor", weight="value")
+d00.du <- ggj.dissimilarity_unit(d00,"Gender","OccMinor", weight="value")
+d05.du <- ggj.dissimilarity_unit(d05,"Gender","OccMinor", weight="value")
+
+#' prepare tables for decomposition
+d85.dm <- ggj.prepare_data(d85,"Gender","OccMinor", weight="value")
+d85.dm[, n_group := sum(freq), by = Gender]
+d85.dm[, n_unit := sum(freq), by = OccMinor]
+d85.dm[, n_all := sum(freq)]
+
+d90.dm <- ggj.prepare_data(d90,"Gender","OccMinor", weight="value")
+d90.dm[, n_group := sum(freq), by = Gender]
+d90.dm[, n_unit := sum(freq), by = OccMinor]
+d90.dm[, n_all := sum(freq)]
+
+d95.dm <- ggj.prepare_data(d95,"Gender","OccMinor", weight="value")
+d95.dm[, n_group := sum(freq), by = Gender]
+d95.dm[, n_unit := sum(freq), by = OccMinor]
+d95.dm[, n_all := sum(freq)]
+
+d00.dm <- ggj.prepare_data(d00,"Gender","OccMinor", weight="value")
+d00.dm[, n_group := sum(freq), by = Gender]
+d00.dm[, n_unit := sum(freq), by = OccMinor]
+d00.dm[, n_all := sum(freq)]
+
+d05.dm <- ggj.prepare_data(d05,"Gender","OccMinor", weight="value")
+d05.dm[, n_group := sum(freq), by = Gender]
+d05.dm[, n_unit := sum(freq), by = OccMinor]
+d05.dm[, n_all := sum(freq)]
+
+# decomposition sums 1985-1990
+d85_90.diff <- merge(d85.dm,d90.dm, by=c("Gender","OccMinor"))
+d85_90.diff[, difffrac := (freq.y * (n_unit.x / n_unit.y)) / (n_group.y * (n_all.x / n_all.y)) ]
+d85_90.decomp <- d85_90.diff[, 1/2 * ggj.abs_diff( difffrac ), by = "OccMinor"]
+
+#' differences 
+d85_90.summary <- d85.du
+colnames(d85_90.summary) <- c("OccMinor","D_1")
+d85_90.summary <- merge(d85_90.summary, d90.du)
+colnames(d85_90.summary) <- c("OccMinor","D_1","D_2")
+d85_90.summary[, within := merge(d85_90.decomp, d85.du, by="OccMinor")[,V1.x-V1.y] ]
+d85_90.summary[, marginal := merge( d90.du, d85_90.decomp, by="OccMinor")[,V1.x-V1.y] ]
+d85_90.summary[, contribution := within + marginal]
+d85_90.summary
+
+# sum over units
+d85_90.sum <- with(d85_90.summary, data.table(D_1 = sum(D_1), D_2 = sum(D_2),
+within = sum(within ),marginal = sum(marginal),
+contribution = sum(contribution)))
+
+
+# decomposition sums 1990-1995
+d90_95.diff <- merge(d90.dm,d95.dm, by=c("Gender","OccMinor"))
+d90_95.diff[, difffrac := (freq.y * (n_unit.x / n_unit.y)) / (n_group.y * (n_all.x / n_all.y)) ]
+d90_95.decomp <- d90_95.diff[, 1/2 * ggj.abs_diff( difffrac ), by = "OccMinor"]
+
+#' differences 
+d90_95.summary <- d90.du
+colnames(d90_95.summary) <- c("OccMinor","D_1")
+d90_95.summary <- merge(d90_95.summary, d95.du)
+colnames(d90_95.summary) <- c("OccMinor","D_1","D_2")
+d90_95.summary[, within := merge(d90_95.decomp, d90.du, by="OccMinor")[,V1.x-V1.y] ]
+d90_95.summary[, marginal := merge( d95.du, d90_95.decomp, by="OccMinor")[,V1.x-V1.y] ]
+d90_95.summary[, contribution := within + marginal]
+d90_95.summary
+
+# sum over units
+d90_95.sum <- with(d90_95.summary, data.table(D_1 = sum(D_1), D_2 = sum(D_2),
+within = sum(within ),marginal = sum(marginal),
+contribution = sum(contribution)))
+d90_95.sum
+
+
+# decomposition sums 1995-2000
+d95_00.diff <- merge(d95.dm,d00.dm, by=c("Gender","OccMinor"))
+d95_00.diff[, difffrac := (freq.y * (n_unit.x / n_unit.y)) / (n_group.y * (n_all.x / n_all.y)) ]
+d95_00.decomp <- d95_00.diff[, 1/2 * ggj.abs_diff( difffrac ), by = "OccMinor"]
+
+#' differences 
+d95_00.summary <- d95.du
+colnames(d95_00.summary) <- c("OccMinor","D_1")
+d95_00.summary <- merge(d95_00.summary, d00.du)
+colnames(d95_00.summary) <- c("OccMinor","D_1","D_2")
+d95_00.summary[, within := merge(d95_00.decomp, d95.du, by="OccMinor")[,V1.x-V1.y] ]
+d95_00.summary[, marginal := merge( d00.du, d95_00.decomp, by="OccMinor")[,V1.x-V1.y] ]
+d95_00.summary[, contribution := within + marginal]
+d95_00.summary
+
+# sum over units
+d95_00.sum <- with(d95_00.summary, data.table(D_1 = sum(D_1), D_2 = sum(D_2),
+within = sum(within ),marginal = sum(marginal),
+contribution = sum(contribution)))
+d95_00.sum
+
+
+# decomposition sums 2000-2005
+d00_05.diff <- merge(d00.dm,d05.dm, by=c("Gender","OccMinor"))
+d00_05.diff[, difffrac := (freq.y * (n_unit.x / n_unit.y)) / (n_group.y * (n_all.x / n_all.y)) ]
+d00_05.decomp <- d00_05.diff[, 1/2 * ggj.abs_diff( difffrac ), by = "OccMinor"]
+
+#' differences 
+d00_05.summary <- d00.du
+colnames(d00_05.summary) <- c("OccMinor","D_1")
+d00_05.summary <- merge(d00_05.summary, d05.du)
+colnames(d00_05.summary) <- c("OccMinor","D_1","D_2")
+d00_05.summary[, within := merge(d00_05.decomp, d00.du, by="OccMinor")[,V1.x-V1.y] ]
+d00_05.summary[, marginal := merge( d05.du, d00_05.decomp, by="OccMinor")[,V1.x-V1.y] ]
+d00_05.summary[, contribution := within + marginal]
+d00_05.summary
+
+# sum over units
+d00_05.sum <- with(d00_05.summary, data.table(D_1 = sum(D_1), D_2 = sum(D_2),
+within = sum(within ),marginal = sum(marginal),
+contribution = sum(contribution)))
+d00_05.sum
+
+# decomposition sums 1985-2005
+d85_05.diff <- merge(d85.dm,d05.dm, by=c("Gender","OccMinor"))
+d85_05.diff[, difffrac := (freq.y * (n_unit.x / n_unit.y)) / (n_group.y * (n_all.x / n_all.y)) ]
+d85_05.decomp <- d85_05.diff[, 1/2 * ggj.abs_diff( difffrac ), by = "OccMinor"]
+
+#' differences 
+d85_05.summary <- d85.du
+colnames(d85_05.summary) <- c("OccMinor","D_1")
+d85_05.summary <- merge(d85_05.summary, d05.du)
+colnames(d85_05.summary) <- c("OccMinor","D_1","D_2")
+d85_05.summary[, within := merge(d85_05.decomp, d85.du, by="OccMinor")[,V1.x-V1.y] ]
+d85_05.summary[, marginal := merge( d05.du, d85_05.decomp, by="OccMinor")[,V1.x-V1.y] ]
+d85_05.summary[, contribution := within + marginal]
+d85_05.summary
+
+# sum over units
+d85_05.sum <- with(d85_05.summary, data.table(D_1 = sum(D_1), D_2 = sum(D_2),
+within = sum(within ),marginal = sum(marginal),
+contribution = sum(contribution)))
+d85_05.sum
+
+# plot it
+res <- cbind(data.table(
+Period = c("1985-1990","1990-1995","1995-2000","2000-2005","1985-2005")),
+rbind(d85_90.sum,d90_95.sum,d95_00.sum,d00_05.sum,d85_05.sum))
+colnames(res) <- c("Period","D_1","D_2","Structural","Occupational","Total")
+
+with(res,barplot(cbind(Structural,Occupational,Total) ~ Period, beside=TRUE, ylim=c(-0.04,0.04),
+main="Decomposition of changes in gender-occupation segregation",xlab="",
+names.arg=c("1985-1990","1990-1995","1995-2000","2000-2005","1985-2005"),
+legend.text = c("Structural","Occupational","Total"), col = gray.colors(3)))
+  </code></pre>
+</article>
 </main>
 <div id="references" class="section level2">
     <h2 class="hasAnchor">
