decomposition for between census changes

--- a/basic/OccupationalCrosswalk.html
+++ b/basic/OccupationalCrosswalk.html
@@ -120,7 +120,10 @@ in the 2005 census. </p>
   contrast to the 245 of UM2020's crosswalk. One reason for this may be differing starting points for creating the 
 crossworks. The crosswalk in this task prioritizes the <a href="https://www.stat.go.jp/english/data/kokusei/2005/syokugyo.html">
   2005 occupational classification</a> while UM2020 appears to 
-prioritize the 1980 classification. </p>
+prioritize the 1980 classification. Occupational classifications for the 1990 through 2005 censuses were derived from the 
+<a href="https://www.soumu.go.jp/toukei_toukatsu/index/seido/shokgyou/61index.htm">3rd Revision 
+Edition of the Japan Standard Occupational Classification</a>; classifications for the 1980 and 1985 censuses were derived from 
+the <a href="https://www.soumu.go.jp/toukei_toukatsu/index/seido/shokgyou/02toukatsu01_03000040.html">2nd Revision</a>.</p>
 <figure>
   <img src="images/OccupationalCrosswalk06.png"
         loading="lazy" alt="Creating hierarchical occupational numbering scheme" width="600" height="500" />
