--- a/basic/ReproduceUMResults.html
+++ b/basic/ReproduceUMResults.html
@@ -93,6 +93,18 @@ with(di_um, text(CensusYear, Change, labels=round(as.numeric(di_um$Change ),3),
 </article>
 <article>
   <h4>Decomposition of changes between censuses</h4>
+  <p>The figure below corresponds to Figure 2 of UM2020 and shows the decomposition of 
+    census-to-census changes into structural and occupational (marginal) components. The 
+    decompositions 1990-1995, 1995-2000, and 2000-2005 are consistent with UM2020, with 
+    larger structural changes for 1995-2000 and 2000-2005, and larger occupational changes 
+    for 1990-1995. For 1985-1990, the total change seems to agree but the decomposition for 
+    this task shows larger, but opposing, contributions for structure and occupations. This 
+    may be an artifact of the crosswalk. As noted in the <a href="OccupationalCrosswalk.html">
+      task on creating the crosswalk</a>, 
+    occupational classifications for 1980 and 1985 were derived from the 2nd Revision of 
+    the Japan Standard Occupational Classification while those for 1990 through 2005 were 
+    derived from the 3rd Revision.
+  </p>
   <figure>
     <img src="images/UMDissimilarity02.png"
           loading="lazy" alt="Decomposition of changes in gender-occupation segregation" width="600" height="500" />
