--- a/index.html
+++ b/index.html
@@ -49,44 +49,65 @@ prefecture. In addition, the data breaks out occupations by whether the responde
 businesses, and employed by others. This may be useful in looking a occupations in which free-lancing and other forms 
 of self-employment are of interest.</p>-->
 <ol>
-  <li><h4><a href="basic/GettingTheData.html">Getting the data for creating occupational crosswalk</a></h4>
-  <p>A step by step guide to downloading occupation and gender data from Japanese population censuses.</p></li>
-  <li><h4><a href="basic/PreprocessingTheData.html">Preprocessing the data</a></h4>
-  <p>Data downloaded from e-Stat usually must be processed before it can be incorporated into statistics 
-    packages or, in this case, used for constructing an occupational crosswalk. Instead of the 2005 data 
-    downloaded in the previous step, here I use 2000 data because it has a "feature" that is not in the 2005 data and 
-    must be corrected.
-  </p></li>
-<li>
-<h4><a href="basic/OccupationalCrosswalk.html">
-Occupational crosswalk</a></h4>
-<p>The objective is to create an occupational crosswalk covering population censuses between 1985 and 2005. I omit 
-  the 1980 census because it is available only in PDF image format.</p>
-</li>
-<li>
-<h4><a href="basic/BuildMasterDataset.html">
-  Build master dataset</a></h4>
-  <p>The occupational crosswalk is used to build a master dataset from the preprocessed occupation-gender 
-    data.</p>
+  <li>
+    <h4>Data and crosswalk</h4>
+    <ol>
+      <li><h4><a href="basic/GettingTheData.html">Getting the data for creating occupational crosswalk</a></h4>
+      <p>A step by step guide to downloading occupation and gender data from Japanese population censuses.</p></li>
+      <li><h4><a href="basic/PreprocessingTheData.html">Preprocessing the data</a></h4>
+      <p>Data downloaded from e-Stat usually must be processed before it can be incorporated into statistics 
+        packages or, in this case, used for constructing an occupational crosswalk. Instead of the 2005 data 
+        downloaded in the previous step, here I use 2000 data because it has a "feature" that is not in the 2005 data and 
+        must be corrected.
+      </p></li>
+      <li>
+      <h4><a href="basic/OccupationalCrosswalk.html">
+      Occupational crosswalk</a></h4>
+      <p>The objective is to create an occupational crosswalk covering population censuses between 1985 and 2005. I omit 
+        the 1980 census because it is available only in PDF image format.</p>
+      </li>
+      <li>
+      <h4><a href="basic/BuildMasterDataset.html">
+      Build master dataset</a></h4>
+      <p>The occupational crosswalk is used to build a master dataset from the preprocessed occupation-gender 
+        data.</p>
+      </li>
+      <li>
+        <h4><a href="basic/DescriptiveStatistics.html">
+          Descriptive statistics</a></h4>
+          <p>This task produces a table of descriptive statistics similar to Table 3 in <a href="#Elbers2021">Elbers (2021)</a>. 
+            Except where noted, the statistics are generated using the R scripts included.</p>
+      </li>
+    </ol>
   </li>
   <li>
-    <h4><a href="basic/DescriptiveStatistics.html">
-      Descriptive statistics</a></h4>
-      <p>This task produces a table of descriptive statistics similar to Table 3 in <a href="#Elbers2021">Elbers (2021)</a>. 
-        Except where noted, the statistics are generated using the R scripts included.</p>
+    <h4>Reproducing Uchiyama and Mugiyama (2020)</h4>
+    <ol>
+      <li>
+        <h4><a href="basic/UchikoshiMugiyamaDecompositionRFunction.html">
+          Decomposition R development</a></h4>
+          <p>Develop R functions and script for computing Uchikoshi/Mugiyama decomposition.</p>
+      </li>
+      <li>
+        <h4><a href="basic/ReproduceUMResults.html">
+          Reproduce results</a></h4>
+          <p>Use R to reproduce results.</p>
+      </li>
+    </ol>
   </li>
-  <li>
-    <h4><a href="basic/UchikoshiMugiyamaDecompositionRFunction.html">
-      Uchikoshi/Mugiyama decomposition R development</a></h4>
-      <p>Develop R functions and script for computing Uchikoshi/Mugiyama decomposition.</p>
+  <li><h4>Apply Elbers (2021) decomposition and analysis</h4>
+    <p>Elbers proposes using Thiel's H index, which is the Mutual Information Index (M) standardized 
+      by the group entropy E, to compute an absolute segregation. Changes between times or spaces are 
+      analysed by decomposing M while holding E constant. In his paper, Elbers provides an example 
+      of analyzing occupational segregation using U.S. census data. In this set of tasks, I apply 
+      Elbers's example to Japanese census data using the crosswalk created above.
+    </p>
+    <ol>
+      <li><h4>Total segregation</h4></li>
+    </ol>
   </li>
-  <li>
-    <h4><a href="basic/ReproduceUMResults.html">
-      Reproduce results from Uchiyama/Mugiyama</a></h4>
-      <p>Use R to reproduce results.</p>
+    </ol>
   </li>
-  </ol>
-</li>
 </ol>
 </main>
 <div id="references" class="section level2">
