--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ of self-employment are of interest.</p>-->
       Elbers's example to Japanese census data using the crosswalk created above.
     </p>
     <ol>
-      <li><h4>Total segregation</h4></li>
+      <li><h4><a href="basic/ElbersTotalSegregation.html">Total segregation</a></h4></li>
     </ol>
   </li>
     </ol>
