--- a/basic/ElbersTotalSegregation.html
+++ b/basic/ElbersTotalSegregation.html
@@ -18,13 +18,35 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
 14 December 2021</p>
 <main>
+    <p>Elbers (2021) derives a five-term decomposition: 
+        $$S(t_{2})-S(t_{1})=\Delta_{appearing}+\Delta_{disappearing}$$
+    $$+\Delta_{marginal-units}+\Delta_{marginal-groups}$$
+$$+\sum_{u\in t_{1}\cap t_{2}}\Delta_{i,structural}$$
+where \(S(t)\) is a segregation index value at time t, 
+\(\Delta_{appearing}\) is the number of units (e.g., occupations) that newly 
+appeared between time \(t_{1}\) and \(t_{2}\), \(\Delta_{disappearing}\) 
+is the number of units that disappeared, \(\Delta_{marginal-units}\) 
+is the marginal change due to units, and \(\Delta_{marginal-groups}\) is 
+that due to groups (for example, genders). The last term is the structural 
+("pure") segregation that occurs within each unit. When written in this 
+form, the Uchikoshi and Mugiyama (2020) [UM2020] decomposition becomes:
+$$S(t_{2})-S(t_{1})=\Delta_{marginal-units}+\sum_{u\in t_{1}\cap t_{2}}\Delta_{i,structural}$$</p>
+<p>In UM2020 the segregation index is Duncans' Dissimilarity Index. Elbers uses Thiel's H index:
+    $$H=\frac{M}{E(p_{g})}$$ where M is the Mutual Information Index and \(E(p_{g})\) is the 
+    group (gender) entropy.
+</p>
+
 </main>
 <div id="references" class="section level2">
     <h2 class="hasAnchor">
     <a href="#references" class="anchor"></a>References</h2>
-    <p><a id="Elbers2021">Elbers, Benjamin (2021)</a>. A Method for Studying Differences in Segregation Across Time and Space. 
+    <p><a id="Elbers2021"></a>Elbers, Benjamin (2021). A Method for Studying Differences in Segregation Across Time and Space. 
         Sociological Methods &amp; Research. <a href="https://doi.org/10.1177/0049124121986204" 
         class="uri">doi:10.18637/jss.v089.i07</a></p>
-</div>    
+    <p>Uchikoshi, Fumiya, Ryota Mugiyama. (2020) Trends in Occupational Sex Segregation in Japan: 
+        A Decomposition Analysis of Census Data, 1980-2005. 
+        Japanese Journal of Population Studies. 2020. 56. 9-23 
+        <a href="https://doi.org/10.24454/jps.1901001" class="uri">https://doi.org/10.24454/jps.1901001</a></p>
+    </div>    
 </body>
 </html>
