add task description

--- a/basic/ElbersTotalSegregation.html
+++ b/basic/ElbersTotalSegregation.html
@@ -35,6 +35,7 @@ $$S(t_{2})-S(t_{1})=\Delta_{marginal-units}+\sum_{u\in t_{1}\cap t_{2}}\Delta_{i
     $$H=\frac{M}{E(p_{g})}$$ where M is the Mutual Information Index and \(E(p_{g})\) is the 
     group (gender) entropy.
 </p>
+<p>This task follows the analysis that Elbers (2021) provides in its supplementary materials.</p>
 
 </main>
 <div id="references" class="section level2">
