add occupational gender segregation graphs

--- a/basic/ElbersTotalSegregation.html
+++ b/basic/ElbersTotalSegregation.html
@@ -36,7 +36,12 @@ $$S(t_{2})-S(t_{1})=\Delta_{marginal-units}+\sum_{u\in t_{1}\cap t_{2}}\Delta_{i
     group (gender) entropy.
 </p>
 <p>This task follows the analysis that Elbers (2021) provides in its supplementary materials.</p>
-
+<p></p>
+<figure>
+    <img src="images/ElbersTotalSegregation01.png"
+          loading="lazy" alt="Occupational gender segregation 1985-2005" width="600" height="900" />
+        <figcaption>Occupational gender segregation 1985-2005</figcaption>
+</figure>
 </main>
 <div id="references" class="section level2">
     <h2 class="hasAnchor">
