fix occupation major group labels

--- a/basic/ElbersTotalSegregation.html
+++ b/basic/ElbersTotalSegregation.html
@@ -28,14 +28,17 @@ appeared between time \(t_{1}\) and \(t_{2}\), \(\Delta_{disappearing}\)
 is the number of units that disappeared, \(\Delta_{marginal-units}\) 
 is the marginal change due to units, and \(\Delta_{marginal-groups}\) is 
 that due to groups (for example, genders). The last term is the structural 
-("pure") segregation that occurs within each unit. When written in this 
-form, the Uchikoshi and Mugiyama (2020) [UM2020] decomposition becomes:
+("pure") segregation that occurs within each unit. </p>
+<p>When written in this 
+form, the Uchikoshi and Mugiyama (2020) [UM2020] decomposition of a change in 
+Duncans' Dissimilarity Index becomes:
 $$S(t_{2})-S(t_{1})=\Delta_{marginal-units}+\sum_{u\in t_{1}\cap t_{2}}\Delta_{i,structural}$$</p>
-<p>In UM2020 the segregation index is Duncans' Dissimilarity Index. Elbers uses Thiel's H index:
-    $$H=\frac{M}{E(p_{g})}$$ where M is the Mutual Information Index and \(E(p_{g})\) is the 
-    group (gender) entropy.
+<p>In UM2020 the segregation index is Duncans' Dissimilarity Index. 
 </p>
-<p>This task follows the analysis that Elbers (2021) provides in its supplementary materials.</p>
+<p>Elbers uses Thiel's H index:
+    $$H=\frac{M}{E(p_{g})}$$ where M is the Mutual Information Index and \(E(p_{g})\) is the 
+    group (gender) entropy. This task follows the analysis that Elbers (2021) provides in his 
+    supplementary materials.</p>
 <p></p>
 <figure>
     <img src="images/ElbersTotalSegregation01.png"
