--- a/basic/ElbersTotalSegregation.html
+++ b/basic/ElbersTotalSegregation.html
@@ -39,11 +39,28 @@ $$S(t_{2})-S(t_{1})=\Delta_{marginal-units}+\sum_{u\in t_{1}\cap t_{2}}\Delta_{i
     $$H=\frac{M}{E(p_{g})}$$ where M is the Mutual Information Index and \(E(p_{g})\) is the 
     group (gender) entropy. This task follows the analysis that Elbers (2021) provides in his 
     supplementary materials.</p>
-<p></p>
+<p>The figure below shows the decomposition of total H and M into the segregation 
+    between the major groups and the weighted sum of segregations within the major 
+    groups. H is a standardized index with a range from 0 (no segregation) to 1 (complete 
+    segregation). M has a minimum of 0 for no segregation; its maximum value is the entropy, 
+    which is the value of the M at complete segregation. The results show sustained high levels 
+    of segregation in the specialist and technical occupations, and sharply decreasing 
+    segregation in transportation and communications occupations. Managerial workers and 
+    manufacturing workers, operators and laborers show gradually decreasing segregation. Sales 
+    occupations show that segregation increased in the period from 1990 to 1995, which started 
+    in Japan's bubble economy and ended in its "lost decade." These major groups will be 
+    analyzed in more detail later in this project.
+</p>
 <figure>
     <img src="images/ElbersTotalSegregation01.png"
           loading="lazy" alt="Occupational gender segregation 1985-2005" width="600" height="900" />
         <figcaption>Occupational gender segregation 1985-2005</figcaption>
+</figure>
+<p></p>
+<figure>
+    <img src="images/ElbersTotalSegregation02.png"
+          loading="lazy" alt="Decomposition of change 1985 to 2005" width="600" height="400" />
+        <figcaption>Decomposition of change 1985 to 2005</figcaption>
 </figure>
 </main>
 <div id="references" class="section level2">
