add decomposition of changes

--- a/basic/DescriptiveStatistics.html
+++ b/basic/DescriptiveStatistics.html
@@ -222,7 +222,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
          </tr>
        </tbody>
        </table>
-<pre><code class="language-html">' AnalyzePerElbers.R
+<pre><code class="language-html">#' AnalyzePerElbers.R
 #' 2021-12-15
 
 #' Adapted from
