--- a/basic/ElbersLocalSegregation.html
+++ b/basic/ElbersLocalSegregation.html
@@ -23,6 +23,13 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
               loading="lazy" alt="Local segregation for designers 1985 and 2005" width="600" height="900" />
             <figcaption>Local segregation for designers 1985 and 2005</figcaption>
     </figure>
-    </main>
+</main>
+<div id="references" class="section level2">
+    <h2 class="hasAnchor">
+    <a href="#references" class="anchor"></a>References</h2>
+    <p><a id="Elbers2021"></a>Elbers, Benjamin (2021). A Method for Studying Differences in Segregation Across Time and Space. 
+        Sociological Methods &amp; Research. <a href="https://doi.org/10.1177/0049124121986204" 
+        class="uri">doi:10.18637/jss.v089.i07</a></p>
+    </div>    
 </body>
 </html>
