--- a/basic/ElbersLocalSegregation.html
+++ b/basic/ElbersLocalSegregation.html
@@ -18,6 +18,19 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
 <p class="author"><a href="https://orcid.org/0000-0003-0070-2347" target="_blank">Alan Engel</a><br>Last update: 
 18 December 2021</p>
 <main>
+    <p>Elbers (2021) details how an increase in the share of women working in production 
+        and crafts (U.S.) leads to an expected <i>increase</i> in segregation and explains 
+        this increase using the example of carpenters. Here, I apply this approach to specialist 
+        and technical workers in Japan using the example of designers.
+    </p>
+    <p>Between 1985 and 2005 the share of women designers rose from 40.3% to 42.5%. But, 
+        as shown in the figure, local segregation of designers also increased. (This figure 
+        was computed using the function <i>mutual_local</i> with bootstrap error estimation.) 
+        In 1985, the female share of this occupation was 40.3% while the female share of 
+        the major group was 40.1%. This leads to a local segregation score for designers 
+        (with specialist and technical workers) of 
+        \(0.403\cdot log(\frac{0.0403}{0.401}})\)
+    </p>
     <figure>
         <img src="images/LocalSegregationDesigners.png"
               loading="lazy" alt="Local segregation for designers 1985 and 2005" width="600" height="900" />
