--- a/basic/ElbersLocalSegregation.html
+++ b/basic/ElbersLocalSegregation.html
@@ -23,19 +23,23 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
         this increase using the example of carpenters. Here, I apply this approach to specialist 
         and technical workers in Japan using the example of designers.
     </p>
-    <p>Between 1985 and 2005 the share of women designers rose from 40.3% to 42.5%. But, 
+   <!--<p>Between 1985 and 2005 the share of women designers rose from 40.3% to 42.5%. But, 
         as shown in the figure, local segregation of designers also increased. (This figure 
         was computed using the function <i>mutual_local</i> with bootstrap error estimation.) 
         In 1985, the female share of this occupation was 40.3% while the female share of 
         the major group was 40.1%. This leads to a local segregation score for designers 
         (with specialist and technical workers) of 
-        \(0.403\cdot log(\frac{0.0403}{0.401}})\)
+        \(0.403 \cdot log(\frac{0.403}{0.401})+0.597 \cdot log(\frac{0.597}{0.599})=0.00\). 
+        In 2005, the female share of the major group is 47.4%, which represents and increase 
+        in the share of women of about 18% and a decrease in the share of men of about 12%.
+        After proportionally increasing the number of women and decreasing the number of men,
+        the <i>expected</i> share of women is now 47.6%. 
     </p>
     <figure>
         <img src="images/LocalSegregationDesigners.png"
               loading="lazy" alt="Local segregation for designers 1985 and 2005" width="600" height="900" />
             <figcaption>Local segregation for designers 1985 and 2005</figcaption>
-    </figure>
+    </figure>-->
 </main>
 <div id="references" class="section level2">
     <h2 class="hasAnchor">
